<resources>
    <string name="app_name">Gett2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avaliable_rides">Avaliable Rides</string>
    <string name="my_rides">My Rides</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="source">Source</string>
    <string name="target">Target</string>
    <string name="claim">Claim</string>
    <string name="tel">phone number</string>
    <string name="name">name</string>
    <string name="WRONG_USER_PASSWORD">wrong password</string>
    <string name="FIREBASE">Firebase</string>
    <string name="BUTTON_CLOSE">Close</string>
    <string name="addContact">ADD TO CONTACTS</string>
    <string name="CLAIMED">You took the ride</string>
    <string name="GettTaxi">GettTaxi</string>

</resources>
