<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_avaliable_rides"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/avaliable_rides" />
        <item
            android:id="@+id/nav_my_rides"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/my_rides" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/stat_sys_upload_done"
                android:title="@string/logout" />
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="@string/send" />-->
        </menu>
    </item>

</menu>
